--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -1,6 +1,6 @@
 $purple: #cd5ff8;
-$primary: #422CC7;
-$secondary:#0da8a6 ;
+$primary: #03045e;
+$secondary:#0077b6 ;
 $black: #0c0B13;
 $orange : #cf590b;
 $light : #F0F2F5;
