added contact service-me companyServices pages

--- a/src/layout/Footer/footer.css
+++ b/src/layout/Footer/footer.css
@@ -45,6 +45,8 @@
          /*    transition: all 0.5s ease-in-out; */
             font-size: 18px;
             letter-spacing: 0.5px;
+            color: white;
+            text-decoration: none;
 
         }
         .access-li:hover{
