--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,10 @@ body{
 .btn-white:hover{
   background-color: var(--primary-light) !important;
 }
-
+/* a{
+  text-decoration: none !important;
+  color: inherit !important;
+} */
 .logo{
   width: 50px;
   margin: 0 10px ;
